deployment/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rating-service-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: rating-service
  replicas: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: rating-service
    spec:
      containers:
        - name: rating-service-container
          image: localdevcluster-registry:5000/rating-service
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 2m
              memory: 400Mi
            limits:
              cpu: 3m
              memory: 600Mi
