deployment/http-to-nats-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-to-nats-proxy-service
spec:
  selector:
    app.kubernetes.io/name: http-to-nats-proxy
  ports:
    - protocol: TCP
      port: 8080
      targetPort: service-port

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-to-nats-proxy-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: http-to-nats-proxy
  replicas: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: http-to-nats-proxy
    spec:
      containers:
        - name: http-to-nats-proxy-container
          image: localdevcluster-registry:5000/http-to-nats-proxy
          imagePullPolicy: Always
          ports:
            - name: service-port
              containerPort: 3000
          resources:
            requests:
              cpu: 200m
              memory: 100Mi
            limits:
              cpu: 400m
              memory: 200Mi
