deployment/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: http
  namespace: kgateway-system
spec:
  gatewayClassName: kgateway
  listeners:
    - protocol: HTTP
      port: 8080
      name: http
      allowedRoutes:
        namespaces:
          from: All

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rating-service-route
  namespace: default
spec:
  parentRefs:
    - name: http
      namespace: kgateway-system
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/api"
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: "/"
        # - type: CORS
        #   cors:
        #     allowCredentials: false
        #     allowHeaders:
        #       - "*"
        #     allowMethods:
        #       - GET
        #       - POST
        #       - OPTIONS
        #     allowOrigins:
        #       - "*"
        #     exposeHeaders:
        #     - Origin
        #     - X-HTTPRoute-Header
      backendRefs:
        - name: http-to-nats-proxy-service
          port: 8080
    - matches:
        - path:
            type: PathPrefix
            value: "/ui"
      backendRefs:
        - name: frontend-service
          port: 8080
